crush/CrushWrapper: behave with empty weight vector

Newer STL (el8) doesn't like weight[0] when weight is empty.

Fixes: https://tracker.ceph.com/issues/43404
Signed-off-by: Sage Weil <sage@redhat.com>